--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 04 22:56:15 CST 2019
-sdk.dir=C\:\\Users\\Administrator\\AppData\\Local\\Android\\Sdk
+#Mon Apr 08 13:38:21 CST 2019
+sdk.dir=/Users/chenguanxi/Library/Android/sdk
