--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,5 +75,6 @@
         <activity android:name=".ui.activity.WebViewActivity" />
         <activity android:name=".ui.activity.BorrowListActivity" />
         <activity android:name=".ui.activity.BankCardActivity" />
+        <activity android:name=".ui.activity.FaceLiveAuthActivity" />
     </application>
 </manifest>
