--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 11 23:04:17 CST 2019
-sdk.dir=C\:\\Users\\Administrator\\AppData\\Local\\Android\\Sdk
+#Fri Apr 12 09:00:17 CST 2019
+sdk.dir=/Users/chenguanxi/Library/Android/sdk
