--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,12 +50,12 @@ android {
 
     productFlavors {
         shuidi{
-            buildConfigField "String", "API_HOST", "\"http://api.douyu.rryouxin.com/v1/\""//API主地址
-            buildConfigField "String", "H5_HOST", "\"http://douyu.rryouxin.com\""//H5地址
+            buildConfigField "String", "API_HOST", "\"http://api.douyu.xxoojoke.com/v1/\""//API主地址
+            buildConfigField "String", "H5_HOST", "\"http://douyu.xxoojoke.com\""//H5地址
             buildConfigField "String", "BAIQISHI_PARTNER_CODE", "\"sdkj\""//白骑士商户号
             buildConfigField "String", "API_KEY", "\"EUuw9sf*df3DdUva\""//API密匙
-            buildConfigField "String", "ORC_APP_KEY", "\"nJY1banGHDb1H2ACrGhsJVdeRk3ehba5um26wngUgg\""//云识客 APP_KEY
-            buildConfigField "String", "ORC_SECRET_KEY", "\"64DF6CCC1AE53C20DCE7B1EF93089AF1\""// 云识客 SECRET_KEY
+            buildConfigField "String", "ORC_APP_KEY", "\"oAdL5H8V2PeWGEZNX3fh1Ney646VviqH1unxkw2J6B\""//云识客 APP_KEY
+            buildConfigField "String", "ORC_SECRET_KEY", "\"3784F57A5E4D9221AFFF1A552DFD9597\""// 云识客 SECRET_KEY
 
 
             applicationId 'tech.shuidikeji.shuidijinfu'
@@ -119,6 +119,8 @@ dependencies {
     implementation 'in.srain.cube:ultra-ptr:1.0.11'
     //Adapter
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
+    //pickerView
+    implementation 'com.contrarywind:Android-PickerView:4.1.7'
     //高德地图
     implementation 'com.amap.api:location:4.5.1'
     //秒支付
@@ -128,6 +130,11 @@ dependencies {
 
     //云识客 身份认证/人脸识别
     implementation ('name':'idauthsdk',ext: 'aar')
+
+    //WebView认证
+    implementation 'com.just.agentweb:agentweb:4.0.2' // (必选)
+    implementation 'com.just.agentweb:download:4.0.2' // (可选)
+    implementation 'com.just.agentweb:filechooser:4.0.2'// (可选)
 
 
 }
